In Memory Trigger Impl (not persistent b/w server restarts or valid for upgrade)